# AILog

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  TESTING.md  UNINSTALL.md  ailog.py  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/ailog/: __init__.py  ai_client.py  analyzer.py  build_wrapper.py  cli.py  config_manager.py  display.py  knowledge_pack.py  line_hints.py  logcat_wrapper.py  noise_filter.py  report.py
tests/: test_ai_client.py  test_analyzer.py  test_build_wrapper.py  test_config_manager.py  test_display.py  test_knowledge_pack.py  test_line_hints.py  test_logcat_wrapper.py  test_noise_filter.py  test_report.py  test_security.py
