[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ailog"
dynamic = ["version"]
description = "AI-powered Android/AOSP log interpreter"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
ailog = "ailog.cli:main"

[tool.setuptools.dynamic]
version = {attr = "ailog.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
